camel-k/010-camel-k-operator.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator
- apiVersion: rbac.authorization.k8s.io/v1beta1
  kind: Role
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator
  rules:
  - apiGroups:
    - camel.apache.org
    resources:
    - '*'
    verbs:
    - '*'
  - apiGroups:
    - ""
    resources:
    - pods
    - services
    - endpoints
    - persistentvolumeclaims
    - configmaps
    - secrets
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
  - apiGroups:
    - ""
    resources:
    - events
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - apps
    resources:
    - deployments
    - replicasets
    - statefulsets
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
  - apiGroups:
    - apps
    resources:
    - daemonsets
    verbs:
    - get
    - list
    - watch
  - apiGroups:
    - ""
    - build.openshift.io
    resources:
    - buildconfigs
    - buildconfigs/webhooks
    - builds
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
  - apiGroups:
    - ""
    - image.openshift.io
    resources:
    - imagestreamimages
    - imagestreammappings
    - imagestreams
    - imagestreams/secrets
    - imagestreamtags
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
  - apiGroups:
    - ""
    - build.openshift.io
    resources:
    - buildconfigs/instantiate
    - buildconfigs/instantiatebinary
    - builds/clone
    verbs:
    - create
  - apiGroups:
    - ""
    - route.openshift.io
    resources:
    - routes
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
  - apiGroups:
    - ""
    - route.openshift.io
    resources:
    - routes/custom-host
    verbs:
    - create
- apiVersion: rbac.authorization.k8s.io/v1beta1
  kind: RoleBinding
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: camel-k-operator
  subjects:
  - kind: ServiceAccount
    name: camel-k-operator
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: camel-k-operator
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: camel-k-operator
      spec:
        containers:
        - command:
          - camel-k
          image: docker.io/apache/camel-k:0.0.5
          imagePullPolicy: IfNotPresent
          name: camel-k-operator
          ports:
          - containerPort: 60000
            name: metrics
          resources: {}
        serviceAccountName: camel-k-operator
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
      name: camel-k-operator
    name: camel-k-operator
  spec:
    ports:
    - name: metrics
      port: 60000
      protocol: TCP
      targetPort: metrics
    selector:
      name: camel-k-operator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: rbac.authorization.k8s.io/v1beta1
  kind: Role
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator-knative
  rules:
  - apiGroups:
    - serving.knative.dev
    resources:
    - '*'
    verbs:
    - create
    - delete
    - deletecollection
    - get
    - list
    - patch
    - update
    - watch
- apiVersion: rbac.authorization.k8s.io/v1beta1
  kind: RoleBinding
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k-operator-knative
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: camel-k-operator-knative
  subjects:
  - kind: ServiceAccount
    name: camel-k-operator
- apiVersion: camel.apache.org/v1alpha1
  kind: IntegrationPlatform
  metadata:
    creationTimestamp: null
    labels:
      app: camel-k
    name: camel-k
  spec:
    build: {}
    profile: Knative
  status: {}
kind: List
metadata: {}
